[tool.poetry]
name = "explorer-server"
version = "0.1.0"
description = ""
authors = ["Onee_Only <kimww0306@gmail.com>"]
readme = "README.md"
packages = [{include = "explorer_server"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
